watermark-filter/sh/istio/mesh/hello1_destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: http-hello
  name: hello1-dr
spec:
  host: hello1-svc
  subsets:
    - name: hello1v1
      labels:
        version: v1
    - name: hello1v2
      labels:
        version: v2
    - name: hello1v3
      labels:
        version: v3
